Fix dead scrollbar in registration form

--- a/src/app/auth/register/register.component.scss
+++ b/src/app/auth/register/register.component.scss
@@ -5,7 +5,7 @@ form {
     margin-top: 40px;
     width: 100%;
     height: 380px; 
-    overflow-y: none;
+    overflow-y: auto;
 }
 
 .h-group {
